# meo-gpt-connector

./: .env.example  .gitignore  .woodpecker.yml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml
docs/: admin-plan.md  deployment.md  gpt-system-prompt.md  initial-tasks.md  install.md  plan-v1.1.md  release.md  testing-plan.md
docs/plan/: 01-setup-project.md  02-auth-utils.md  03-oauth-endpoints.md  04-main-app-auth.md  05-core-api-pets.md  06-core-api-health.md  07-admin-interface.md  08-gpt-integration.md  09-hardening.md  index.md
docs/research/: GPT-configuration-guide.md  GPT-recomengations.md  gemini-recommendations.md  grok-recommendations.md  kimi-recomengations.md  plan-v1.0.md
scripts/: simulate_gpt_tool_flow.py  simulate_oauth_flow.py
src/: main.py
src/core/: admin_events.py  config.py  crypto.py  dependencies.py  jwt.py  logging.py  rate_limit.py  redis.py
src/models/: errors.py  health.py  pets.py
src/routers/: admin.py  health.py  medical_records.py  oauth.py  pets.py  public.py  vaccinations.py  weights.py
src/services/: main_app.py  pets_normalization.py
src/templates/admin/: base.html  index.html
src/templates/admin/partials/: auth.html  errors.html  requests.html  stats.html
src/templates/public/: privacy.html
tests/: conftest.py  test_admin.py  test_auth_flow.py  test_crypto.py  test_duplicate_filter.py  test_hardening.py  test_health.py  test_jwt_utils.py  test_medical_records.py  test_normalization.py  test_pets.py  test_public.py  test_redis.py  test_vaccinations.py  test_weights.py
utils/: deploy-ci.sh
