[project]
name = "meo-gpt-connector"
version = "0.2.1"
description = "ChatGPT Custom GPT connector for Meo Mai Moi pet care platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "python-jose[cryptography]>=3.3",
    "cryptography>=43",
    "redis[hiredis]>=5.2",
    "structlog>=24.4",
    "python-multipart>=0.0.18",
    "jinja2>=3.1",
    "tomllib>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "pytest-cov>=6",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "locust>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "pytest-cov>=6",
    "ruff>=0.8",
    "mypy>=1.13",
    "locust>=2.31",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # do not perform function calls in default arguments (FastAPI Depends pattern)
    "E501",  # line too long — OpenAPI/GPT description strings are intentionally verbose
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["src.routers.*", "src.main"]
disallow_untyped_defs = false
